--- a/styles_sheet/margin.html
+++ b/styles_sheet/margin.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <title>margin</title>
     <style>
-        .box{height: 1000px; width: 1000px; border:1px #f00 solid;
+        .box{
+            /*margin
+            margin-top
+            margin-right
+            margin-bottom
+            margin-left*/
+
+            height: 1000px; width: 1000px; border:1px #f00 solid;
         margin:0 auto;
 
     }
