--- a/styles_sheet/padding.html
+++ b/styles_sheet/padding.html
@@ -15,7 +15,13 @@
 
 </head>
 <body>
+<div class="box"></div>
 
+<p>text</p>
+<p style="margin=top:10px">text</p>
+<p>text</p>
+<p>text</p>
+<p>text</p>
 
 
 </body>
